monitoring/03-allow-prometheus-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-public-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9090
