monitoring/07-allow-grafana-loki-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grafana-loki-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.90.90.32/32
    ports:
    - protocol: TCP
      port: 3100
