monitoring/08-allow-grafana-webhook-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-webhook-egress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: grafana
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
