monitoring/10-allow-alloy-kubernetes-api-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-alloy-kubernetes-api-egress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: alloy
      app.kubernetes.io/name: alloy
  egress:
    - toEntities:
        - kube-apiserver
