monitoring/11-allow-alloy-loki-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alloy-loki-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: alloy
      app.kubernetes.io/name: alloy
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.13.13.30/32
    ports:
    - protocol: TCP
      port: 3100
