monitoring/15-allow-prometheus-monitoring-components-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-monitoring-components-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: prometheus
          app.kubernetes.io/name: alertmanager
    ports:
    - protocol: TCP
      port: 9093
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: prometheus
          app.kubernetes.io/name: kube-state-metrics
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: prometheus
          app.kubernetes.io/name: prometheus-pushgateway
    ports:
    - protocol: TCP
      port: 9091
