monitoring/16-allow-prometheus-node-exporter-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-node-exporter-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.70.0/24
    ports:
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 9962
    - protocol: TCP
      port: 9964
    - protocol: TCP
      port: 9965
