monitoring/18-allow-prometheus-remote-write-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-remote-write-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.13.13.206/32
    ports:
    - protocol: TCP
      port: 9090
